[workspace]
# Extra tooling projects will be added.
members = [
    "anchor",
    "anchor/client",
    "anchor/common/ssv_types",
    "anchor/common/version",
    "anchor/http_api",
    "anchor/http_metrics",
    "anchor/network",
    "anchor/processor",
    "anchor/qbft",
    "anchor/signature_collector",
    "anchor/validator_store",
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
client = { path = "anchor/client" }
qbft = { path = "anchor/qbft" }
http_api = { path = "anchor/http_api" }
http_metrics = { path = "anchor/http_metrics" }
network = { path = "anchor/network" }
version = { path = "anchor/common/version" }
processor = { path = "anchor/processor" }
anchor_validator_store = { path = "anchor/validator_store" }
ssv_types = { path = "anchor/common/ssv_types" }
signature_collector = { path = "anchor/signature_collector" }
lighthouse_network = { git = "https://github.com/dknopik/lighthouse", branch = "modularize-validator-store" }
task_executor = { git = "https://github.com/dknopik/lighthouse", branch = "modularize-validator-store", default-features = false, features = [ "tracing", ] }
metrics = { git = "https://github.com/dknopik/lighthouse", branch = "modularize-validator-store" }
validator_metrics = { git = "https://github.com/dknopik/lighthouse", branch = "modularize-validator-store" }
sensitive_url = { git = "https://github.com/dknopik/lighthouse", branch = "modularize-validator-store" }
slot_clock = { git = "https://github.com/dknopik/lighthouse", branch = "modularize-validator-store" }
unused_port = { git = "https://github.com/dknopik/lighthouse", branch = "modularize-validator-store" }
types = { git = "https://github.com/dknopik/lighthouse", branch = "modularize-validator-store" }
validator_services = { git = "https://github.com/dknopik/lighthouse", branch = "modularize-validator-store" }
eth2_config = { git = "https://github.com/dknopik/lighthouse", branch = "modularize-validator-store" }
eth2 = { git = "https://github.com/dknopik/lighthouse", branch = "modularize-validator-store" }
validator_store = { git = "https://github.com/dknopik/lighthouse", branch = "modularize-validator-store" }
beacon_node_fallback = { git = "https://github.com/dknopik/lighthouse", branch = "modularize-validator-store" }
derive_more = { version = "1.0.0", features = ["full"] }
async-channel = "1.9"
axum = "0.7.7"
clap = { version = "4.5.15", features = ["derive", "wrap_help"] }
dashmap = "6.1.0"
discv5 = "0.8.0"
dirs = "5.0.1"
either = "1.13.0"
futures = "0.3.30"
tower-http = { version = "0.6", features = ["cors"] }
hyper = "1.4"
num_cpus = "1"
parking_lot = "0.12"
serde = { version = "1.0.208", features = ["derive"] }
strum = { version = "0.24", features = ["derive"] }
tokio = { version = "1.39.2", features = [
    "rt",
    "rt-multi-thread",
    "time",
    "signal",
    "macros",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
base64 = "0.22.1"
openssl = "0.10.68"

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false

