[workspace]
# Extra tooling projects will be added.
members = [
    "anchor",
    "anchor/client",
    "anchor/common/qbft",
    "anchor/common/ssv_types",
    "anchor/common/version",
    "anchor/http_api",
    "anchor/http_metrics",
    "anchor/network",
    "anchor/processor",
    "anchor/qbft_manager",
    "anchor/signature_collector",
    "anchor/validator_store",
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
anchor_validator_store = { path = "anchor/validator_store" }
async-channel = "1.9"
axum = "0.7.7"
base64 = "0.22.1"
beacon_node_fallback = { git = "https://github.com/dknopik/lighthouse", branch = "modularize-validator-store" }
clap = { version = "4.5.15", features = ["derive", "wrap_help"] }
client = { path = "anchor/client" }
dashmap = "6.1.0"
derive_more = { version = "1.0.0", features = ["full"] }
dirs = "5.0.1"
discv5 = "0.9.0"
either = "1.13.0"
eth2 = { git = "https://github.com/dknopik/lighthouse", branch = "modularize-validator-store" }
eth2_config = { git = "https://github.com/dknopik/lighthouse", branch = "modularize-validator-store" }
futures = "0.3.30"
http_api = { path = "anchor/http_api" }
http_metrics = { path = "anchor/http_metrics" }
hyper = "1.4"
lighthouse_network = { git = "https://github.com/dknopik/lighthouse", branch = "modularize-validator-store" }
metrics = { git = "https://github.com/dknopik/lighthouse", branch = "modularize-validator-store" }
network = { path = "anchor/network" }
num_cpus = "1"
openssl = "0.10.68"
parking_lot = "0.12"
processor = { path = "anchor/processor" }
qbft = { path = "anchor/common/qbft" }
qbft_manager = { path = "anchor/qbft_manager" }
safe_arith = { git = "https://github.com/dknopik/lighthouse", branch = "modularize-validator-store" }
sensitive_url = { git = "https://github.com/dknopik/lighthouse", branch = "modularize-validator-store" }
serde = { version = "1.0.208", features = ["derive"] }
signature_collector = { path = "anchor/signature_collector" }
slashing_protection = { git = "https://github.com/dknopik/lighthouse", branch = "modularize-validator-store" }
slot_clock = { git = "https://github.com/dknopik/lighthouse", branch = "modularize-validator-store" }
ssv_types = { path = "anchor/common/ssv_types" }
strum = { version = "0.24", features = ["derive"] }
task_executor = { git = "https://github.com/dknopik/lighthouse", branch = "modularize-validator-store", default-features = false, features = [ "tracing", ] }
tokio = { version = "1.39.2", features = [
    "rt",
    "rt-multi-thread",
    "time",
    "signal",
    "macros",
] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
tree_hash = "0.8"
tree_hash_derive = "0.8"
types = { git = "https://github.com/dknopik/lighthouse", branch = "modularize-validator-store" }
unused_port = { git = "https://github.com/dknopik/lighthouse", branch = "modularize-validator-store" }
validator_metrics = { git = "https://github.com/dknopik/lighthouse", branch = "modularize-validator-store" }
validator_services = { git = "https://github.com/dknopik/lighthouse", branch = "modularize-validator-store" }
validator_store = { git = "https://github.com/dknopik/lighthouse", branch = "modularize-validator-store" }
version = { path = "anchor/common/version" }

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false

