[workspace]
# Extra tooling projects will be added.
members = [
    "anchor",
    "anchor/client",
    "anchor/common/bls_lagrange",
    "anchor/common/qbft",
    "anchor/common/ssv_types",
    "anchor/common/version",
    "anchor/database",
    "anchor/eth",
    "anchor/http_api",
    "anchor/http_metrics",
    "anchor/network",
    "anchor/processor",
    "anchor/qbft_manager",
    "anchor/signature_collector",
    "anchor/validator_store",
]
resolver = "2"

[workspace.package]
edition = "2021"

# This table has three subsections: first the internal dependencies, then the lighthouse dependencies, then all other.
[workspace.dependencies]
anchor_validator_store = { path = "anchor/validator_store" }
bls_lagrange = { path = "anchor/common/bls_lagrange" }
client = { path = "anchor/client" }
database = { path = "anchor/database" }
eth = { path = "anchor/eth" }
http_api = { path = "anchor/http_api" }
http_metrics = { path = "anchor/http_metrics" }
network = { path = "anchor/network" }
processor = { path = "anchor/processor" }
qbft = { path = "anchor/common/qbft" }
qbft_manager = { path = "anchor/qbft_manager" }
signature_collector = { path = "anchor/signature_collector" }
ssv_types = { path = "anchor/common/ssv_types" }

beacon_node_fallback = { git = "https://github.com/sigp/lighthouse", rev = "1a77f7a0" }
bls = { git = "https://github.com/sigp/lighthouse", rev = "1a77f7a0" }
eth2 = { git = "https://github.com/sigp/lighthouse", rev = "1a77f7a0" }
eth2_config = { git = "https://github.com/sigp/lighthouse", rev = "1a77f7a0" }
eth2_network_config = { git = "https://github.com/sigp/lighthouse", rev = "1a77f7a0" }
health_metrics = { git = "https://github.com/sigp/lighthouse", rev = "1a77f7a0" }
lighthouse_network = { git = "https://github.com/sigp/lighthouse", rev = "1a77f7a0" }
metrics = { git = "https://github.com/sigp/lighthouse", rev = "1a77f7a0" }
safe_arith = { git = "https://github.com/sigp/lighthouse", rev = "1a77f7a0" }
sensitive_url = { git = "https://github.com/sigp/lighthouse", rev = "1a77f7a0" }
slashing_protection = { git = "https://github.com/sigp/lighthouse", rev = "1a77f7a0" }
slot_clock = { git = "https://github.com/sigp/lighthouse", rev = "1a77f7a0" }
task_executor = { git = "https://github.com/sigp/lighthouse", rev = "1a77f7a0", default-features = false, features = [
    "tracing",
] }
types = { git = "https://github.com/sigp/lighthouse", rev = "1a77f7a0" }
unused_port = { git = "https://github.com/sigp/lighthouse", rev = "1a77f7a0" }
validator_metrics = { git = "https://github.com/sigp/lighthouse", rev = "1a77f7a0" }
validator_services = { git = "https://github.com/sigp/lighthouse", rev = "1a77f7a0" }
validator_store = { git = "https://github.com/sigp/lighthouse", rev = "1a77f7a0" }

alloy = { version = "0.6.4", features = [
    "sol-types",
    "transports",
    "json",
    "contract",
    "pubsub",
    "provider-ws",
    "rpc-types",
    "rlp",
] }
async-channel = "1.9"
axum = "0.7.7"
base64 = "0.22.1"
blst = { git = "https://github.com/dknopik/blst", branch = "sk-conversion" }
# the custom repo is needed because they fix to a specific version of blst, which conflicts with the line above
blstrs_plus = { git = "https://github.com/dknopik/blstrs", branch = "pls" }
clap = { version = "4.5.15", features = ["derive", "wrap_help"] }
dashmap = "6.1.0"
derive_more = { version = "1.0.0", features = ["full"] }
dirs = "5.0.1"
discv5 = "0.9.0"
either = "1.13.0"
ethereum_ssz = "0.7"
ethereum_ssz_derive = "0.7.0"
futures = "0.3.30"
hex = "0.4.3"
hyper = "1.4"
indexmap = "2.7.0"
num_cpus = "1"
openssl = "0.10.68"
parking_lot = "0.12"
rand = "0.8.5"
reqwest = "0.12.12"
rusqlite = "0.28.0"
serde = { version = "1.0.208", features = ["derive"] }
sha2 = "0.10.8"
strum = { version = "0.24", features = ["derive"] }
tokio = { version = "1.39.2", features = [
    "rt",
    "rt-multi-thread",
    "time",
    "signal",
    "macros",
] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
tree_hash = "0.8"
tree_hash_derive = "0.8"
version = { path = "anchor/common/version" }
vsss-rs = "5.1.0"
zeroize = "1.8.1"

[patch.crates-io]
# todo: remove when https://github.com/supranational/blst/pull/248 is merged
blst = { git = "https://github.com/dknopik/blst", branch = "sk-conversion" }

[profile.maxperf]
inherits = "release"

codegen-units = 1
incremental = false
lto = "fat"
