[package]
name = "database"
version = "0.1.0"
edition = { workspace = true }
authors = ["Sigma Prime <contact@sigmaprime.io>"]

[dependencies]
base64 = { workspace = true }
openssl = { workspace = true }
r2d2 = "0.8.10"
r2d2_sqlite = "0.21.0"
rusqlite = { workspace = true }
ssv_types = { workspace = true }
tokio = { workspace = true }
types = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
tempfile = "3.14.0"
