[package]
name = "network"
version = "0.1.0"
edition = { workspace = true }
authors = ["Sigma Prime <contact@sigmaprime.io>"]

[dependencies]
dirs = { workspace = true }
discv5 = { workspace = true }
ethereum_ssz = "0.8.1"
ethereum_ssz_derive = "0.8.1"
futures = { workspace = true }
hex = "0.4.3"
libp2p = { git = "https://github.com/dknopik/rust-libp2p.git", rev = "c20b9e94", default-features = false, features = [
  "identify",
  "yamux",
  "noise",
  "secp256k1",
  "tcp",
  "tokio",
  "macros",
  "gossipsub",
  "quic",
  "ping",
] }
lighthouse_network = { workspace = true }
serde = { workspace = true }
ssz_types = "0.10"
subnet_tracker = { workspace = true }
task_executor = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
types = { workspace = true }
version = { workspace = true }

[dev-dependencies]
async-channel = { workspace = true }
