[package]
name = "blst_lagrange"
version = "0.1.0"
edition = "2021"

[dependencies]
bls = { workspace = true }
blstrs_plus = { workspace = true, optional = true }
vsss-rs = { workspace = true, optional = true }
blst = { workspace = true, optional = true }
rand = { workspace = true }

[dev-dependencies]
blst = { workspace = true }

[features]
default = ["blst"]
blsful = ["dep:blstrs_plus", "dep:vsss-rs"]
blst = ["dep:blst"]
blst_single_thread = ["blst"]
