[package]
name = "ssv_network_config"
version = "0.1.0"
authors = ["Sigma Prime <contact@sigmaprime.io"]
edition = { workspace = true }

[dependencies]
alloy = { workspace = true }
enr = { workspace = true }
eth2_network_config = { workspace = true }
serde_yaml = { workspace = true }
ssv_types = { workspace = true }
